<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.endeavourhealth</groupId>
  <artifactId>eds</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <java.version>1.8</java.version>
    <node.version>v6.10.1</node.version>
    <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
    <frontend-maven-plugin.version>1.4</frontend-maven-plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.endeavourhealth</groupId>
        <artifactId>discovery-versions</artifactId>
        <version>1.0-SNAPSHOT</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>src/eds-messaging-api</module>
    <module>src/eds-messaging-core</module>
    <module>src/eds-queuereader</module>
    <module>src/eds-subscriber</module>
    <module>src/eds-ui</module>
    <module>src/utility-postcode-updater</module>
    <module>src/utility-enterprise-age-updater</module>
    <module>src/utility-enterprise-person-updater</module>
    <module>src/utility-database-deidentifier</module>
    <module>src/utility-hl7-checker</module>
  </modules>

  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>central</id>
      <name>libs-release</name>
      <url>http://maven.endeavourhealth.net:8081/artifactory/libs-release</url>
    </repository>
    <repository>
      <snapshots/>
      <id>snapshots</id>
      <name>libs-snapshot</name>
      <url>http://maven.endeavourhealth.net:8081/artifactory/libs-snapshot</url>
    </repository>
  </repositories>

  <distributionManagement>
    <snapshotRepository>
      <id>snapshots</id>
      <name>maven.endeavourhealth.org-snapshots</name>
      <url>http://maven.endeavourhealth.net:8081/artifactory/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>

</project>
